package fr.fms.mongodb_bank.entities;

public enum AccountStatus {
    ACTIVE,
    SUSPENDED,
    CLOSED
}
